@@ -1,3 +1,8 @@
 # Sigas Server Broker
 
 Sigas server side broker pod code
+
+
+## Note
+
+Java needs to be run with '--add-opens' parameter.
